--- a/OG/5-AgentLSTM.ipynb
+++ b/OG/5-AgentLSTM.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 2,
    "id": "6a92d788-0cf7-4b64-8b38-47ad7a1f588f",
    "metadata": {},
    "outputs": [],
@@ -290,7 +290,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x22d495accd0>"
+       "<torch._C.Generator at 0x1577435dd10>"
       ]
      },
      "execution_count": 5,
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 508,
+   "execution_count": 451,
    "id": "195cdcd4-4adb-4771-a889-0d344515c629",
    "metadata": {},
    "outputs": [],
@@ -524,13 +524,12 @@
     "        self._all_actions = list({i.get_action() for i in interactions})   # Assumes the list interaction is sorted\n",
     "        self._history_act = []\n",
     "        self._history_fb = []\n",
-    "        # self._valence = valence\n",
     "        self._valence = {i.key():i.get_valence() for i in interactions}\n",
-    "        # self._gap_train = context_length\n",
-    "        # self._gap_test = context_length\n",
     "        self._context_length = context_length\n",
-    "        # self.proposed_df = pd.DataFrame(columns=[\"proposition\", \"valence\", \"action\"])\n",
-    "        self.proposed_df = pd.DataFrame(np.empty((1000, len(3))), [\"proposition\", \"valence\", \"action\"])\n",
+    "        self.prealloc_df = pd.DataFrame(np.empty((1000, 3)), columns=[\"proposition\", \"valence\", \"action\"])\n",
+    "        self.prealloc_df = self.prealloc_df.astype({\"proposition\": \"U20\", \"valence\": float, \"action\": int})\n",
+    "        self.current_index = 0\n",
+    "        self.proposed_df = None\n",
     "\n",
     "    def fit(self, actions:list, outcomes:list):\n",
     "        \"\"\"\n",
@@ -561,6 +560,7 @@
     "    def predict(self, action):\n",
     "        if len(self._history_act) + len(self._history_fb) < self._context_length:\n",
     "            raise Exception(\"Not enough data to train model\")\n",
+    "            \n",
     "        x = []\n",
     "        for i in range(len(self._history_act) - self._context_length, len(self._history_act)):\n",
     "            x.append(self._history_act[i])\n",
@@ -568,6 +568,7 @@
     "        x.append(action)\n",
     "        # action = self._tokenizer.encode(x)\n",
     "\n",
+    "        # Construct the context sequence\n",
     "        action = torch.tensor([x], dtype=torch.int).to(device)\n",
     "\n",
     "        h = torch.zeros(self._model.num_layers, 1, self._model.hidden_size, device=device)\n",
@@ -582,7 +583,7 @@
     "    \n",
     "    def recursif_expective_valance(self, seq:list, max_depth:int, seuil:float=0.2, proba:float = 1, seq_predi:list = []):\n",
     "        \"\"\"\n",
-    "        Create the self.proposed_df\n",
+    "        Create the list of proposed sequences\n",
     "        \"\"\"\n",
     "        max_depth -= 1\n",
     "        self._model.eval()\n",
@@ -602,38 +603,40 @@
     "            # Transforme x into list proba\n",
     "            probs = torch.nn.functional.softmax(x, dim=0).tolist()\n",
     "            \n",
-    "            # for each outcomes we want proba with act\n",
+    "            # for each outcome, record the expected valence\n",
     "            for i, out in enumerate(self._all_outcomes):\n",
     "                tmp_new_seq = new_seq + [out]\n",
     "                tmp_proba = probs[i] * proba\n",
+    "                # If the probability is above a threshold\n",
     "                if tmp_proba > seuil:\n",
-    "                    tempo = float(np.round(self._valence[f\"{act}{out}\"] * tmp_proba, decimals=4))\n",
-    "                    if self.proposed_df.empty:\n",
-    "                        self.proposed_df = pd.DataFrame([{\"proposition\": str(tmp_new_seq), \"valence\": tempo, \"action\": tmp_new_seq[0]}])\n",
-    "                    else: \n",
-    "                        new_sequence = pd.DataFrame([{\"proposition\": str(tmp_new_seq), \"valence\": tempo, \"action\": tmp_new_seq[0]}])\n",
-    "                        self.proposed_df = pd.concat([self.proposed_df, new_sequence], ignore_index=True)\n",
+    "                    # Record the proposed sequence with its expected valence\n",
+    "                    expected_valence = float(np.round(self._valence[f\"{act}{out}\"] * tmp_proba, decimals=4))\n",
+    "                    self.prealloc_df.iloc[self.current_index] = [str(tmp_new_seq), expected_valence, tmp_new_seq[0]]\n",
+    "                    self.current_index += 1\n",
+    "                    # If the max_depth is not reached \n",
     "                    if max_depth > 0: \n",
-    "                        longer_sequences = self.recursif_expective_valance(seq=seq[2:] + [act, out], max_depth=max_depth, seuil=seuil, \n",
-    "                                             proba=tmp_proba, seq_predi=tmp_new_seq.copy())\n",
-    "                        self.proposed_df = pd.concat([self.proposed_df, longer_sequences], ignore_index=True)\n",
+    "                        # Recursively look for longer sequences\n",
+    "                        self.recursif_expective_valance(seq=seq[2:] + [act, out], max_depth=max_depth, seuil=seuil, \n",
+    "                            proba=tmp_proba, seq_predi=tmp_new_seq.copy())\n",
     "        \n",
     "    def decide(self):\n",
     "        \"\"\"Select the next action\"\"\"\n",
     "\n",
-    "        # Construct the sequence upon which the predictions are made\n",
+    "        # Construct the context sequence\n",
     "        x = []\n",
     "        for i in range(-self._context_length//2, 0, 1):\n",
     "            x.append(self._history_act[i])\n",
     "            x.append(self._history_fb[i])\n",
     "\n",
-    "        # Create the dataset of propositions \n",
-    "        self.proposed_df = self.proposed_df.drop(self.proposed_df.index)\n",
-    "        self.recursif_expective_valance(seq=x, max_depth=4, seuil=0.2)\n",
+    "        # Create the dataframe of propositions \n",
+    "        start = time.time()\n",
+    "        self.current_index = 0\n",
+    "        self.recursif_expective_valance(seq=x, max_depth=3, seuil=0.2)\n",
     "\n",
     "        # Return the action that has the highest expected valence\n",
-    "        self.proposed_df = self.proposed_df.sort_values(by=['valence'], ascending=[False]).reset_index(drop=True)\n",
-    "        return(self.proposed_df.loc[0, 'action'])\n",
+    "        self.proposed_df = self.prealloc_df.iloc[:self.current_index].sort_values(by=['valence'], ascending=[False]).reset_index(drop=True)\n",
+    "        print(f\"Proposition time: {time.time() - start:.4f} seconds. Proposition {self.proposed_df.loc[0, 'proposition']}\")\n",
+    "        return(int(self.proposed_df.loc[0, 'action']))\n",
     "\n",
     "    def action(self, outcome):\n",
     "        \"\"\" \n",
@@ -685,14 +688,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 509,
+   "execution_count": 452,
    "id": "1b64219e-8c44-4eb5-83d5-829aa3ea72f4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b816f219e28492590f3fad271b3652c",
+       "model_id": "421057189ee24151a30d655b627beb28",
        "version_major": 2,
        "version_minor": 0
       },
@@ -748,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 528,
+   "execution_count": 460,
    "id": "3676217d-5634-4b7e-bc28-bc354f65e192",
    "metadata": {},
    "outputs": [
@@ -756,7 +759,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step: 18\n"
+      "step: 7\n",
+      "Proposition time: 0.1586 seconds. Proposition [2, 0]\n"
      ]
     },
     {
@@ -789,31 +793,31 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>[2, 0]</td>\n",
-       "      <td>2.8789</td>\n",
+       "      <td>4.0072</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>[4, 0, 4, 0, 2, 0]</td>\n",
-       "      <td>2.7154</td>\n",
-       "      <td>4</td>\n",
+       "      <td>[3, 0, 2, 0]</td>\n",
+       "      <td>3.2378</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>[4, 0, 2, 0]</td>\n",
-       "      <td>2.6036</td>\n",
-       "      <td>4</td>\n",
+       "      <td>[2, 0, 2, 0]</td>\n",
+       "      <td>3.2116</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>[4, 0, 4, 0, 4, 0, 2, 0]</td>\n",
-       "      <td>2.5523</td>\n",
-       "      <td>4</td>\n",
+       "      <td>[5, 0, 2, 0]</td>\n",
+       "      <td>3.1469</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>[4, 0, 4, 0, 2, 0, 2, 0]</td>\n",
-       "      <td>1.5635</td>\n",
+       "      <td>[4, 0, 2, 0]</td>\n",
+       "      <td>3.0455</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -823,58 +827,58 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>606</th>\n",
-       "      <td>[2, 1]</td>\n",
-       "      <td>-4.2421</td>\n",
+       "      <th>140</th>\n",
+       "      <td>[2, 0, 4, 0]</td>\n",
+       "      <td>-4.7441</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>607</th>\n",
-       "      <td>[4, 0, 4, 0, 4, 0, 4, 0]</td>\n",
-       "      <td>-4.2781</td>\n",
+       "      <th>141</th>\n",
+       "      <td>[4, 0, 4, 0, 2, 1]</td>\n",
+       "      <td>-5.5423</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>608</th>\n",
+       "      <th>142</th>\n",
        "      <td>[4, 0, 4, 0, 4, 0]</td>\n",
-       "      <td>-4.5514</td>\n",
+       "      <td>-5.5990</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>609</th>\n",
+       "      <th>143</th>\n",
        "      <td>[4, 0, 4, 0]</td>\n",
-       "      <td>-4.8421</td>\n",
+       "      <td>-5.8230</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>610</th>\n",
+       "      <th>144</th>\n",
        "      <td>[4, 0]</td>\n",
-       "      <td>-5.3636</td>\n",
+       "      <td>-5.9195</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>611 rows × 3 columns</p>\n",
+       "<p>145 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  proposition  valence  action\n",
-       "0                      [2, 0]   2.8789       2\n",
-       "1          [4, 0, 4, 0, 2, 0]   2.7154       4\n",
-       "2                [4, 0, 2, 0]   2.6036       4\n",
-       "3    [4, 0, 4, 0, 4, 0, 2, 0]   2.5523       4\n",
-       "4    [4, 0, 4, 0, 2, 0, 2, 0]   1.5635       4\n",
-       "..                        ...      ...     ...\n",
-       "606                    [2, 1]  -4.2421       2\n",
-       "607  [4, 0, 4, 0, 4, 0, 4, 0]  -4.2781       4\n",
-       "608        [4, 0, 4, 0, 4, 0]  -4.5514       4\n",
-       "609              [4, 0, 4, 0]  -4.8421       4\n",
-       "610                    [4, 0]  -5.3636       4\n",
+       "            proposition  valence  action\n",
+       "0                [2, 0]   4.0072       2\n",
+       "1          [3, 0, 2, 0]   3.2378       3\n",
+       "2          [2, 0, 2, 0]   3.2116       2\n",
+       "3          [5, 0, 2, 0]   3.1469       5\n",
+       "4          [4, 0, 2, 0]   3.0455       4\n",
+       "..                  ...      ...     ...\n",
+       "140        [2, 0, 4, 0]  -4.7441       2\n",
+       "141  [4, 0, 4, 0, 2, 1]  -5.5423       4\n",
+       "142  [4, 0, 4, 0, 4, 0]  -5.5990       4\n",
+       "143        [4, 0, 4, 0]  -5.8230       4\n",
+       "144              [4, 0]  -5.9195       4\n",
        "\n",
-       "[611 rows x 3 columns]"
+       "[145 rows x 3 columns]"
       ]
      },
-     "execution_count": 528,
+     "execution_count": 460,
      "metadata": {},
      "output_type": "execute_result"
     }
