--- a/OG/6-AgentLSTM-2.ipynb
+++ b/OG/6-AgentLSTM-2.ipynb
@@ -5,7 +5,7 @@
    "id": "953e7771-f571-4331-aa8c-8408b0eb1e76",
    "metadata": {},
    "source": [
-    "# AGENT LSTM"
+    "# AGENT LSTM 2 (EN CONSTRUCTION)"
    ]
   },
   {
@@ -74,8 +74,8 @@
     "TURN_LEFT = 3\n",
     "TURN_RIGHT = 4\n",
     "FEEL_FRONT = 5\n",
-    "FEEL_LEFT = 6  # Non utilisé\n",
-    "FEEL_RIGHT = 7  # Non utilisé"
+    "FEEL_LEFT = 6\n",
+    "FEEL_RIGHT = 7"
    ]
   },
   {
@@ -90,11 +90,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "d744460e-79da-48ce-9c90-ded24579c0f3",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "LEFT = 0\n",
@@ -253,7 +249,6 @@
     "                plt.savefig(path + '/' + number + \".png\")\n",
     "                plt.close(fig)\n",
     "               \n",
-    "\n",
     "    def save(self, step):\n",
     "        \"\"\"\n",
     "        save the display as png file\n",
@@ -297,7 +292,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x1aba130fbf0>"
+       "<torch._C.Generator at 0x221b1882bf0>"
       ]
      },
      "execution_count": 4,
@@ -509,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "id": "195cdcd4-4adb-4771-a889-0d344515c629",
    "metadata": {},
    "outputs": [],
@@ -638,7 +633,7 @@
     "        # Create the dataframe of propositions \n",
     "        start = time.time()\n",
     "        self.current_index = 0\n",
-    "        self.recursif_expective_valance(seq=x, max_depth=4, seuil=0.2)\n",
+    "        self.recursif_expective_valance(seq=x, max_depth=3, seuil=0.2)\n",
     "\n",
     "        # Return the action that has the highest expected valence\n",
     "        self.proposed_df = self.prealloc_df.iloc[:self.current_index].sort_values(by=['valence'], ascending=[False]).reset_index(drop=True)\n",
@@ -663,6 +658,7 @@
     "            \n",
     "            # Fit only if the predicted outcome is wrong\n",
     "            if self._predicted_outcome != outcome:\n",
+    "                print(\"Fit\", self._history_act, self._history_fb)\n",
     "                self.fit(self._history_act, self._history_fb)\n",
     "                self._boredom = 0\n",
     "                \n",
@@ -692,14 +688,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "id": "1b64219e-8c44-4eb5-83d5-829aa3ea72f4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d5ed8a2722c2428a81d86bd1857bdc80",
+       "model_id": "9343bc0a028c4947a037277d75155123",
        "version_major": 2,
        "version_minor": 0
       },
@@ -717,7 +713,8 @@
     "torch.manual_seed(0)\n",
     "\n",
     "# Reset the model\n",
-    "model_ML = LSTM(hidden_size=128, num_emb=6, num_layers=2, output_size=2)\n",
+    "# Embedding must be greater or equal than the number of tokens\n",
+    "model_ML = LSTM(hidden_size=128, num_emb=8, num_layers=2, output_size=2)\n",
     "optimizer = torch.optim.Adam(model_ML.parameters(), lr=0.001, weight_decay=0.0001)\n",
     "loss_func = nn.CrossEntropyLoss()\n",
     "\n",
@@ -734,6 +731,10 @@
     "    Interaction(TURN_RIGHT,1,-6),\n",
     "    Interaction(FEEL_FRONT,0,-1),\n",
     "    Interaction(FEEL_FRONT,1,-1),\n",
+    "    Interaction(FEEL_LEFT,0,-1),\n",
+    "    Interaction(FEEL_LEFT,1,-1),\n",
+    "    Interaction(FEEL_RIGHT,0,-1),\n",
+    "    Interaction(FEEL_RIGHT,1,-1),\n",
     "]\n",
     "\n",
     "agent = AgentLSTM(\n",
@@ -755,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 127,
    "id": "3676217d-5634-4b7e-bc28-bc354f65e192",
    "metadata": {},
    "outputs": [
@@ -763,8 +764,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step: 7\n",
-      "Proposition time: 0.6774 seconds. Proposition [4, 1, 4, 1, 5, 1, 5, 1]\n"
+      "step: 80\n",
+      "Proposition time: 0.4289 seconds. Proposition [6, 1, 6, 0, 6, 1]\n"
      ]
     },
     {
@@ -796,33 +797,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>[4, 1, 4, 1, 5, 1, 5, 1]</td>\n",
-       "      <td>-0.2025</td>\n",
-       "      <td>4</td>\n",
+       "      <td>[6, 1, 6, 0, 6, 1]</td>\n",
+       "      <td>-0.2260</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>[4, 1, 4, 1, 2, 1, 5, 1]</td>\n",
-       "      <td>-0.2064</td>\n",
-       "      <td>4</td>\n",
+       "      <td>[6, 1, 6, 0, 7, 1]</td>\n",
+       "      <td>-0.2262</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>[4, 1, 4, 1, 5, 1]</td>\n",
-       "      <td>-0.2065</td>\n",
-       "      <td>4</td>\n",
+       "      <td>[6, 1, 6, 0, 5, 1]</td>\n",
+       "      <td>-0.2264</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>[4, 0, 4, 0, 3, 1, 5, 1]</td>\n",
-       "      <td>-0.2099</td>\n",
-       "      <td>4</td>\n",
+       "      <td>[6, 1, 6, 0]</td>\n",
+       "      <td>-0.2264</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>[4, 0, 4, 0, 5, 1, 5, 1]</td>\n",
-       "      <td>-0.2113</td>\n",
-       "      <td>4</td>\n",
+       "      <td>[6, 1, 2, 1, 6, 0]</td>\n",
+       "      <td>-0.2313</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -831,58 +832,58 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>519</th>\n",
-       "      <td>[2, 1, 5, 1, 2, 1]</td>\n",
-       "      <td>-9.6189</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>520</th>\n",
-       "      <td>[2, 1, 2, 1, 2, 1, 2, 1]</td>\n",
-       "      <td>-9.6437</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>521</th>\n",
+       "      <th>314</th>\n",
        "      <td>[2, 1, 2, 1, 2, 1]</td>\n",
-       "      <td>-9.7764</td>\n",
+       "      <td>-9.9961</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>522</th>\n",
+       "      <th>315</th>\n",
+       "      <td>[5, 1, 2, 1]</td>\n",
+       "      <td>-9.9967</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>316</th>\n",
+       "      <td>[7, 1, 2, 1]</td>\n",
+       "      <td>-9.9973</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>317</th>\n",
        "      <td>[2, 1, 2, 1]</td>\n",
-       "      <td>-9.9109</td>\n",
+       "      <td>-9.9974</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>523</th>\n",
+       "      <th>318</th>\n",
        "      <td>[2, 1]</td>\n",
-       "      <td>-9.9456</td>\n",
+       "      <td>-9.9987</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>524 rows × 3 columns</p>\n",
+       "<p>319 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  proposition  valence  action\n",
-       "0    [4, 1, 4, 1, 5, 1, 5, 1]  -0.2025       4\n",
-       "1    [4, 1, 4, 1, 2, 1, 5, 1]  -0.2064       4\n",
-       "2          [4, 1, 4, 1, 5, 1]  -0.2065       4\n",
-       "3    [4, 0, 4, 0, 3, 1, 5, 1]  -0.2099       4\n",
-       "4    [4, 0, 4, 0, 5, 1, 5, 1]  -0.2113       4\n",
-       "..                        ...      ...     ...\n",
-       "519        [2, 1, 5, 1, 2, 1]  -9.6189       2\n",
-       "520  [2, 1, 2, 1, 2, 1, 2, 1]  -9.6437       2\n",
-       "521        [2, 1, 2, 1, 2, 1]  -9.7764       2\n",
-       "522              [2, 1, 2, 1]  -9.9109       2\n",
-       "523                    [2, 1]  -9.9456       2\n",
+       "            proposition  valence  action\n",
+       "0    [6, 1, 6, 0, 6, 1]  -0.2260       6\n",
+       "1    [6, 1, 6, 0, 7, 1]  -0.2262       6\n",
+       "2    [6, 1, 6, 0, 5, 1]  -0.2264       6\n",
+       "3          [6, 1, 6, 0]  -0.2264       6\n",
+       "4    [6, 1, 2, 1, 6, 0]  -0.2313       6\n",
+       "..                  ...      ...     ...\n",
+       "314  [2, 1, 2, 1, 2, 1]  -9.9961       2\n",
+       "315        [5, 1, 2, 1]  -9.9967       5\n",
+       "316        [7, 1, 2, 1]  -9.9973       7\n",
+       "317        [2, 1, 2, 1]  -9.9974       2\n",
+       "318              [2, 1]  -9.9987       2\n",
        "\n",
-       "[524 rows x 3 columns]"
+       "[319 rows x 3 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 128,
    "id": "9895d291-f934-4134-8a04-466ad1ace43f",
    "metadata": {},
    "outputs": [],
