--- a/OG/3-DNN_Basics.ipynb
+++ b/OG/3-DNN_Basics.ipynb
@@ -34,17 +34,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 537,
+   "execution_count": 1294,
    "id": "4e13c8b7-622d-4cdd-9859-68713c032a86",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x20732e9c7b0>"
+       "<torch._C.Generator at 0x1c12155f7f0>"
       ]
      },
-     "execution_count": 537,
+     "execution_count": 1294,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 538,
+   "execution_count": 1295,
    "id": "9ea8d9bc-cd69-46e0-abd5-3db95a931718",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 539,
+   "execution_count": 1296,
    "id": "d8b689a6-39d9-43b1-860b-2414472e9562",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 540,
+   "execution_count": 1297,
    "id": "135476ca-c317-4c31-ac5d-0e525677acc1",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 541,
+   "execution_count": 1298,
    "id": "2a200cab-1c3f-4de8-9f26-14f22a3191ea",
    "metadata": {},
    "outputs": [],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 542,
+   "execution_count": 1299,
    "id": "1568b236-37bf-4f6f-b08d-a0d4be404da2",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 588,
+   "execution_count": 1340,
    "id": "4cb50ab1-08e1-488c-bcaf-e1b1519a81ff",
    "metadata": {},
    "outputs": [
@@ -185,8 +185,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration: 46\n",
-      "Loss: 0.277550, Accuracy: 100%\n"
+      "Iteration: 41\n",
+      "Loss: 0.282971, Accuracy: 100%\n"
      ]
     }
    ],
