--- a/OG/5-AgentLSTM.ipynb
+++ b/OG/5-AgentLSTM.ipynb
@@ -10,10 +10,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9558e0ed-3996-4e38-968e-c566140d3034",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: tqdm in c:\\users\\ogeorgeon\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (4.67.1)\n",
+      "Requirement already satisfied: colorama in c:\\users\\ogeorgeon\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from tqdm) (0.4.6)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.0 -> 25.0.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: imageio in c:\\users\\ogeorgeon\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (2.37.0)\n",
+      "Requirement already satisfied: numpy in c:\\users\\ogeorgeon\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from imageio) (2.0.2)\n",
+      "Requirement already satisfied: pillow>=8.3.2 in c:\\users\\ogeorgeon\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from imageio) (9.5.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.0 -> 25.0.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install tqdm\n",
     "!pip install imageio"
@@ -297,7 +333,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x1aba130fbf0>"
+       "<torch._C.Generator at 0x2882c25dc70>"
       ]
      },
      "execution_count": 4,
@@ -692,14 +728,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "1b64219e-8c44-4eb5-83d5-829aa3ea72f4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d5ed8a2722c2428a81d86bd1857bdc80",
+       "model_id": "77da5d02c40f40ccb1d9341d4df8eabe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -755,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "id": "3676217d-5634-4b7e-bc28-bc354f65e192",
    "metadata": {},
    "outputs": [
@@ -763,8 +799,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step: 7\n",
-      "Proposition time: 0.6774 seconds. Proposition [4, 1, 4, 1, 5, 1, 5, 1]\n"
+      "step: 10\n",
+      "Proposition time: 0.4624 seconds. Proposition [5, 1, 4, 0, 4, 0, 5, 1]\n"
      ]
     },
     {
@@ -796,33 +832,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>[4, 1, 4, 1, 5, 1, 5, 1]</td>\n",
-       "      <td>-0.2025</td>\n",
-       "      <td>4</td>\n",
+       "      <td>[5, 1, 4, 0, 4, 0, 5, 1]</td>\n",
+       "      <td>-0.7068</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>[4, 1, 4, 1, 2, 1, 5, 1]</td>\n",
-       "      <td>-0.2064</td>\n",
+       "      <td>[4, 0, 5, 1, 4, 0, 5, 1]</td>\n",
+       "      <td>-0.7212</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>[4, 1, 4, 1, 5, 1]</td>\n",
-       "      <td>-0.2065</td>\n",
-       "      <td>4</td>\n",
+       "      <td>[5, 1, 4, 0, 5, 1, 5, 1]</td>\n",
+       "      <td>-0.7385</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>[4, 0, 4, 0, 3, 1, 5, 1]</td>\n",
-       "      <td>-0.2099</td>\n",
-       "      <td>4</td>\n",
+       "      <td>[5, 1, 5, 1, 4, 0, 5, 1]</td>\n",
+       "      <td>-0.7400</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>[4, 0, 4, 0, 5, 1, 5, 1]</td>\n",
-       "      <td>-0.2113</td>\n",
-       "      <td>4</td>\n",
+       "      <td>[5, 1, 4, 0, 3, 1, 5, 1]</td>\n",
+       "      <td>-0.7416</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -831,58 +867,58 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>519</th>\n",
-       "      <td>[2, 1, 5, 1, 2, 1]</td>\n",
-       "      <td>-9.6189</td>\n",
+       "      <th>335</th>\n",
+       "      <td>[2, 1, 2, 1, 4, 0, 2, 1]</td>\n",
+       "      <td>-9.8681</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>520</th>\n",
-       "      <td>[2, 1, 2, 1, 2, 1, 2, 1]</td>\n",
-       "      <td>-9.6437</td>\n",
-       "      <td>2</td>\n",
+       "      <th>336</th>\n",
+       "      <td>[3, 1, 2, 1]</td>\n",
+       "      <td>-9.8733</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>521</th>\n",
+       "      <th>337</th>\n",
        "      <td>[2, 1, 2, 1, 2, 1]</td>\n",
-       "      <td>-9.7764</td>\n",
+       "      <td>-9.9178</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>522</th>\n",
+       "      <th>338</th>\n",
        "      <td>[2, 1, 2, 1]</td>\n",
-       "      <td>-9.9109</td>\n",
+       "      <td>-9.9753</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>523</th>\n",
+       "      <th>339</th>\n",
        "      <td>[2, 1]</td>\n",
-       "      <td>-9.9456</td>\n",
+       "      <td>-9.9871</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>524 rows × 3 columns</p>\n",
+       "<p>340 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                  proposition  valence  action\n",
-       "0    [4, 1, 4, 1, 5, 1, 5, 1]  -0.2025       4\n",
-       "1    [4, 1, 4, 1, 2, 1, 5, 1]  -0.2064       4\n",
-       "2          [4, 1, 4, 1, 5, 1]  -0.2065       4\n",
-       "3    [4, 0, 4, 0, 3, 1, 5, 1]  -0.2099       4\n",
-       "4    [4, 0, 4, 0, 5, 1, 5, 1]  -0.2113       4\n",
+       "0    [5, 1, 4, 0, 4, 0, 5, 1]  -0.7068       5\n",
+       "1    [4, 0, 5, 1, 4, 0, 5, 1]  -0.7212       4\n",
+       "2    [5, 1, 4, 0, 5, 1, 5, 1]  -0.7385       5\n",
+       "3    [5, 1, 5, 1, 4, 0, 5, 1]  -0.7400       5\n",
+       "4    [5, 1, 4, 0, 3, 1, 5, 1]  -0.7416       5\n",
        "..                        ...      ...     ...\n",
-       "519        [2, 1, 5, 1, 2, 1]  -9.6189       2\n",
-       "520  [2, 1, 2, 1, 2, 1, 2, 1]  -9.6437       2\n",
-       "521        [2, 1, 2, 1, 2, 1]  -9.7764       2\n",
-       "522              [2, 1, 2, 1]  -9.9109       2\n",
-       "523                    [2, 1]  -9.9456       2\n",
+       "335  [2, 1, 2, 1, 4, 0, 2, 1]  -9.8681       2\n",
+       "336              [3, 1, 2, 1]  -9.8733       3\n",
+       "337        [2, 1, 2, 1, 2, 1]  -9.9178       2\n",
+       "338              [2, 1, 2, 1]  -9.9753       2\n",
+       "339                    [2, 1]  -9.9871       2\n",
        "\n",
-       "[524 rows x 3 columns]"
+       "[340 rows x 3 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
